# network-raft-algorithm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
raft_consensus/: __main__.py  db_client.py  raft_node_client_factory.py  raft_node_server.py  raft_node_servicer.py
raft_consensus/grpc_types/: raft_node_pb2.py  raft_node_pb2.pyi  raft_node_pb2_grpc.py
raft_consensus/protos/: raft_node.proto
